# enchanter

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTORS  Cargo.toml  LICENSE  Makefile  README.md
.enchanter/plans/: daemon-mode.md  tui-mode.md
.github/workflows/: ci.yml
src/: activity_log.rs  agent.rs  daemon.rs  home.rs  main.rs  overlay.rs  protocol.rs  recorder.rs  repl.rs  replay.rs  sandbox.rs  session.rs  status_bar.rs  summary.rs
src/api/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/kstore/: mod.rs
src/mcp/: mod.rs
src/memory/: mod.rs
src/prompt/: inspect.rs  mod.rs
src/scaffold/: SOUL.md  config.yaml
src/skills/: mod.rs
src/soul/: mod.rs
src/tools/: mod.rs
src/tui/: app.rs  commands.rs  input.rs  mod.rs  model_info.rs  render.rs  state.rs
tests/: sandbox.rs
