[package]
name = "enchanter"
version = "0.1.0"
edition = "2024"
description = "A focused AI agent harness"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
directories = "6"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rustyline = "15"
colored = "3"
chrono = "0.4"
anyhow = "1"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true