[package]
name = "enchanter"
version = "0.3.0"
edition = "2024"
description = "A focused AI agent harness"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rustyline = "15"
colored = "3"
chrono = "0.4"
anyhow = "1"
dirs = "6"
shellexpand = "3"
regex = "1"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
similar = "2"
ratatui = { version = "0.30", optional = true }
ratatui-crossterm = { version = "0.1", optional = true }
crossterm = { version = "0.29", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
ctrlc = "3"

# Filesystem sandbox for shell execution. Linux-only kernel LSM, no runtime
# dependency — keeps non-Linux builds clean.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:ratatui-crossterm", "dep:crossterm"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true